[gd_scene load_steps=21 format=3 uid="uid://cq2bogrtha2ng"]

[ext_resource type="Texture2D" uid="uid://c7jcrpe8n6228" path="res://assets/misc/textures/menu/options.png" id="1_d6e17"]
[ext_resource type="Script" uid="uid://cf5chahieotvp" path="res://gd/misc/menu/options.gd" id="2_1c6y6"]
[ext_resource type="Texture2D" uid="uid://dx11833n71gqk" path="res://assets/misc/textures/menu/crazy_icon.png" id="3_udmbr"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://assets/misc/fonts/ariblk.ttf" id="4_8rf2p"]
[ext_resource type="Texture2D" uid="uid://clg4mk0gj15wb" path="res://assets/misc/textures/menu/handle.png" id="5_f0w4b"]
[ext_resource type="Texture2D" uid="uid://ciby07ecbmnm2" path="res://assets/misc/textures/menu/yes.png" id="6_eaxxt"]
[ext_resource type="Texture2D" uid="uid://2h42e4tljyiq" path="res://assets/misc/textures/menu/no.png" id="7_x2i24"]
[ext_resource type="AudioStream" uid="uid://b54qsdxvp8v5p" path="res://assets/misc/sounds/options_volumetest.wav" id="8_am3t8"]
[ext_resource type="AudioStream" uid="uid://dvtte0lvio6u0" path="res://assets/misc/sounds/baa.wav" id="9_yyjfo"]
[ext_resource type="AudioStream" uid="uid://daax0sm4wiefg" path="res://assets/misc/sounds/uihover.wav" id="10_dsjjm"]
[ext_resource type="AudioStream" uid="uid://dh6pm2jo1420s" path="res://assets/misc/sounds/uipress.wav" id="11_djx2i"]
[ext_resource type="AudioStream" uid="uid://chbwgwjhw1tmf" path="res://assets/misc/sounds/uirelease.wav" id="12_dha7k"]
[ext_resource type="Script" uid="uid://dphjd415e6mu1" path="res://scenes/menu/menu_title_richtext.gd" id="13_1c6y6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmi34"]
bg_color = Color(0.890196, 0.890196, 0.890196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8250"]
content_margin_left = 5.0
bg_color = Color(0.892034, 0.892034, 0.892034, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxLine" id="StyleBoxLine_0kfld"]
color = Color(0.29219, 0.29219, 0.29219, 1)
grow_end = 0.0
thickness = 3

[sub_resource type="Theme" id="Theme_w5qgn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1c6y6"]

[sub_resource type="Theme" id="Theme_51314"]
default_font = ExtResource("4_8rf2p")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("4_8rf2p")
Panel/styles/panel = SubResource("StyleBoxEmpty_1c6y6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wq7h2"]

[node name="Options" type="Sprite2D"]
position = Vector2(319, 240)
texture = ExtResource("1_d6e17")

[node name="Node" type="Node" parent="."]
script = ExtResource("2_1c6y6")

[node name="icon" type="TextureRect" parent="Node"]
offset_left = 511.0
offset_top = 64.0
offset_right = 600.0
offset_bottom = 153.0
texture = ExtResource("3_udmbr")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Name" type="LineEdit" parent="Node"]
offset_left = 77.0
offset_top = 196.0
offset_right = 185.0
offset_bottom = 222.0
scale = Vector2(1.32, 1.32)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.253238, 0.253238, 0.253238, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_8rf2p")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxFlat_vmi34")
theme_override_styles/normal = SubResource("StyleBoxFlat_p8250")
text = "u"
placeholder_text = "Name"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="Master" type="HSlider" parent="Node"]
offset_left = 77.0
offset_top = 273.0
offset_right = 214.0
offset_bottom = 289.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("5_f0w4b")
theme_override_icons/grabber_highlight = ExtResource("5_f0w4b")
theme_override_icons/grabber_disabled = ExtResource("5_f0w4b")
theme_override_styles/slider = SubResource("StyleBoxLine_0kfld")
min_value = -72.0
max_value = 0.0
metadata/_edit_use_anchors_ = true

[node name="Music" type="HSlider" parent="Node"]
offset_left = 77.0
offset_top = 309.0
offset_right = 214.0
offset_bottom = 325.0
focus_mode = 0
theme = SubResource("Theme_w5qgn")
theme_override_icons/grabber = ExtResource("5_f0w4b")
theme_override_icons/grabber_highlight = ExtResource("5_f0w4b")
theme_override_icons/grabber_disabled = ExtResource("5_f0w4b")
theme_override_styles/slider = SubResource("StyleBoxLine_0kfld")
min_value = -72.0
max_value = 0.0
metadata/_edit_use_anchors_ = true

[node name="Fullscreen" type="CheckBox" parent="Node"]
offset_left = 193.0
offset_top = 230.0
offset_right = 233.0
offset_bottom = 270.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("6_eaxxt")
theme_override_icons/unchecked = ExtResource("7_x2i24")
metadata/_edit_use_anchors_ = true

[node name="Save" type="Button" parent="Node"]
texture_filter = 2
offset_left = 200.0
offset_top = 384.0
offset_right = 280.0
offset_bottom = 402.0
scale = Vector2(1.52, 1.52)
focus_mode = 0
theme = SubResource("Theme_51314")
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_8rf2p")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wq7h2")
text = "Save"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Save2" type="Button" parent="Node"]
texture_filter = 2
offset_left = 440.0
offset_top = 352.0
offset_right = 542.0
offset_bottom = 388.0
scale = Vector2(1.16, 1.16)
focus_mode = 0
theme = SubResource("Theme_51314")
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_8rf2p")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wq7h2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wq7h2")
text = "Reset
Progress"
metadata/_edit_use_anchors_ = true

[node name="OptionsVolumetest" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("8_am3t8")
volume_db = -16.0
autoplay = true
bus = &"Music"

[node name="Baa" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("9_yyjfo")
volume_db = -10.0

[node name="Uihover" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("10_dsjjm")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("11_djx2i")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("12_dha7k")
volume_db = -10.0
mix_target = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Node"]
offset_left = 77.0
offset_top = 254.0
offset_right = 261.0
offset_bottom = 269.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Master Volume"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel3" type="RichTextLabel" parent="Node"]
offset_left = 77.0
offset_top = 235.0
offset_right = 194.0
offset_bottom = 250.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Toggle Fullscreen"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel2" type="RichTextLabel" parent="Node"]
offset_left = 77.0
offset_top = 290.0
offset_right = 261.0
offset_bottom = 305.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Music Volume"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Lighting" type="CheckBox" parent="Node"]
offset_left = 511.0
offset_top = 195.0
offset_right = 551.0
offset_bottom = 235.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("6_eaxxt")
theme_override_icons/unchecked = ExtResource("7_x2i24")
metadata/_edit_use_anchors_ = true

[node name="lightingtxt" type="RichTextLabel" parent="Node"]
offset_left = 395.0
offset_top = 201.0
offset_right = 515.0
offset_bottom = 216.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Toggle Lighting"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="PhysicsCulling" type="CheckBox" parent="Node"]
offset_left = 352.0
offset_top = 194.0
offset_right = 392.0
offset_bottom = 234.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("6_eaxxt")
theme_override_icons/unchecked = ExtResource("7_x2i24")
metadata/_edit_use_anchors_ = true

[node name="PhysicsCullingSlider" type="HSlider" parent="Node"]
offset_left = 236.0
offset_top = 235.0
offset_right = 373.0
offset_bottom = 251.0
focus_mode = 0
theme_override_icons/grabber = ExtResource("5_f0w4b")
theme_override_icons/grabber_highlight = ExtResource("5_f0w4b")
theme_override_icons/grabber_disabled = ExtResource("5_f0w4b")
theme_override_styles/slider = SubResource("StyleBoxLine_0kfld")
min_value = 1.0
max_value = 500.0
value = 100.0
tick_count = 20
ticks_on_borders = true
metadata/_edit_use_anchors_ = true

[node name="count" type="RichTextLabel" parent="Node/PhysicsCullingSlider"]
layout_mode = 0
offset_left = 51.0
offset_top = 14.0
offset_right = 81.0
offset_bottom = 32.0
tooltip_text = "Enable to cull physics processing for far-away sheep (Dramatic Performance Increase)"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 10
text = "(0)"
scroll_active = false
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel4" type="RichTextLabel" parent="Node"]
offset_left = 236.0
offset_top = 219.0
offset_right = 372.0
offset_bottom = 234.0
tooltip_text = "Maximum amount of sheep to process at a time"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Sheep to Process"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="physicscullingtxt" type="RichTextLabel" parent="Node"]
offset_left = 236.0
offset_top = 200.0
offset_right = 356.0
offset_bottom = 215.0
tooltip_text = "Enable to cull physics processing for far-away sheep (Dramatic Performance Increase)"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Physics Culling"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="PhysicsSphere" type="CheckBox" parent="Node"]
offset_left = 352.0
offset_top = 266.0
offset_right = 392.0
offset_bottom = 306.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("6_eaxxt")
theme_override_icons/unchecked = ExtResource("7_x2i24")
metadata/_edit_use_anchors_ = true

[node name="physicscullingtxt2" type="RichTextLabel" parent="Node"]
offset_left = 236.0
offset_top = 272.0
offset_right = 361.0
offset_bottom = 289.0
tooltip_text = "Show sphere in which sheep process inside"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Show Cull Sphere"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="physics_cat" type="RichTextLabel" parent="Node"]
offset_left = 288.0
offset_top = 177.0
offset_right = 331.0
offset_bottom = 192.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 10
text = "Physics"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="general_cat" type="RichTextLabel" parent="Node"]
offset_left = 138.0
offset_top = 177.0
offset_right = 181.0
offset_bottom = 192.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 10
text = "General"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Graphics" type="RichTextLabel" parent="Node"]
offset_left = 416.0
offset_top = 177.0
offset_right = 466.0
offset_bottom = 192.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 10
text = "Graphics
"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="DebugRendering" type="CheckBox" parent="Node"]
offset_left = 193.0
offset_top = 322.0
offset_right = 233.0
offset_bottom = 362.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("6_eaxxt")
theme_override_icons/unchecked = ExtResource("7_x2i24")
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel5" type="RichTextLabel" parent="Node"]
offset_left = 77.0
offset_top = 327.0
offset_right = 194.0
offset_bottom = 344.0
tooltip_text = "Enables debug rendering for certain tests"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Debug Rendering"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="SheepTargetting" type="CheckBox" parent="Node"]
offset_left = 351.0
offset_top = 321.0
offset_right = 391.0
offset_bottom = 361.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("6_eaxxt")
theme_override_icons/unchecked = ExtResource("7_x2i24")
metadata/_edit_use_anchors_ = true

[node name="sheeptargettingtxt" type="RichTextLabel" parent="Node"]
offset_left = 235.0
offset_top = 327.0
offset_right = 360.0
offset_bottom = 344.0
tooltip_text = "Make Sheep Target You"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 11
text = "Sheep Targetting"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="physics_cat2" type="RichTextLabel" parent="Node"]
offset_left = 282.0
offset_top = 309.0
offset_right = 337.0
offset_bottom = 324.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 10
text = "Gameplay"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="MenuTitle" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_right = 0.309375
anchor_bottom = 0.03125
offset_left = -206.0
offset_top = -106.0
offset_right = -156.0
offset_bottom = -91.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("4_8rf2p")
theme_override_font_sizes/normal_font_size = 22
text = "MenuTitle"
scroll_active = false
script = ExtResource("13_1c6y6")
metadata/_edit_use_anchors_ = true

[connection signal="text_changed" from="Node/Name" to="Node" method="_on_name_text_changed"]
[connection signal="drag_ended" from="Node/Master" to="Node" method="_on_master_drag_ended"]
[connection signal="value_changed" from="Node/Master" to="Node" method="_on_master_value_changed"]
[connection signal="value_changed" from="Node/Music" to="Node" method="_on_music_value_changed"]
[connection signal="toggled" from="Node/Fullscreen" to="Node" method="_on_fullscreen_toggled"]
[connection signal="button_down" from="Node/Save" to="Node" method="_on_save_button_down"]
[connection signal="mouse_entered" from="Node/Save" to="Node" method="_on_save_mouse_entered"]
[connection signal="pressed" from="Node/Save" to="Node" method="_on_save_pressed"]
[connection signal="button_down" from="Node/Save2" to="Node" method="_on_save_2_button_down"]
[connection signal="mouse_entered" from="Node/Save2" to="Node" method="_on_save_2_mouse_entered"]
[connection signal="pressed" from="Node/Save2" to="Node" method="_on_save_2_pressed"]
[connection signal="toggled" from="Node/Lighting" to="Node" method="_on_lighting_toggled"]
[connection signal="toggled" from="Node/PhysicsCulling" to="Node" method="_on_physics_culling_toggled"]
[connection signal="drag_ended" from="Node/PhysicsCullingSlider" to="Node" method="_on_physics_drag_ended"]
[connection signal="value_changed" from="Node/PhysicsCullingSlider" to="Node" method="_on_physics_value_changed"]
[connection signal="toggled" from="Node/PhysicsSphere" to="Node" method="_on_physics_sphere_toggled"]
[connection signal="toggled" from="Node/DebugRendering" to="Node" method="_on_debug_rendering_toggled"]
[connection signal="toggled" from="Node/SheepTargetting" to="Node" method="_on_sheep_targetting_toggled"]
